fixed list clipping through glass effect

--- a/css.css
+++ b/css.css
@@ -31,6 +31,7 @@ ul
   width: fit-content;
   height: fit-content;
   padding: 1rem; 
+  padding-left: 2rem;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
   border-radius: 5px;
   background-color: rgba(255, 255, 255, .15);
